[package]
name = "weight"
version = "1.0.0"
edition = "2024"
authors = ["Andrew Avsenin"]
readme = "README.md"
homepage = "https://github.com/snatvb/weight"
repository = "https://github.com/snatvb/weight"
license = "MIT"
keywords = ["file", "size", "measure", "weight"]
categories = ["filesystem"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
glob = "0.3.2"
rayon = "1.10.0"
